@@ -27,6 +27,7 @@ ZBX_VECTOR_IMPL(uint64, zbx_uint64_t);
 ZBX_VECTOR_IMPL(str, char *);
 ZBX_VECTOR_IMPL(ptr, void *);
 ZBX_VECTOR_IMPL(ptr_pair, zbx_ptr_pair_t);
+ZBX_VECTOR_IMPL(uint64_pair, zbx_uint64_pair_t);
 
 void	zbx_vector_str_clean(zbx_vector_str_t *vector)
 {
